# errno-codes

./: .gitignore  .travis.yml  Cargo.toml  GNUmakefile  LICENSE-MIT  README.md  generate.py  travis-script
errno-codes/: Cargo.toml  README.md  build.rs
errno-codes-tool/: Cargo.toml
errno-codes-tool/src/: main.rs
errno-codes/examples/: linux-powerpc.rs
errno-codes/src/: lib.rs  windows.json  windows.rs
errno-codes/src/unix/linux/: alpha-codegen-by-id.rs  alpha-codegen-by-num.rs  alpha.json  alpha.rs  arc.rs  arm.rs  arm64.rs  c6x.rs  h8300-codegen-by-id.rs  h8300.rs  hexagon.rs  ia64.rs  m68k.rs  microblaze.rs  mips-codegen-by-id.rs  mips-codegen-by-num.rs  mips.json  mips.rs  mod.rs  nds32.rs  nios2-codegen-by-num.rs  nios2.rs  openrisc.rs  parisc-codegen-by-id.rs  parisc-codegen-by-num.rs  parisc.json  parisc.rs  powerpc-codegen-by-id.rs  powerpc-codegen-by-num.rs  powerpc.json  powerpc.rs  riscv.rs  s390.json  s390.rs  sh.rs  sparc-codegen-by-id.rs  sparc-codegen-by-num.rs  sparc.json  sparc.rs  um.rs  (+4 more)
generate-tests/fail/00-eof-after-backslash/: expected.stdout
generate-tests/fail/01-eof-block-comment/: expected.stdout
generate-tests/fail/02-no-include/: expected.stdout
generate-tests/fail/03-invalid-include/: expected.stdout  main.h
generate-tests/fail/04-recursive-include/: expected.stdout
generate-tests/fail/05-no-abs-include/: expected.stdout  main.h
generate-tests/fail/06-define-unexpected-number-of-tokens/: expected.stdout  main.h
generate-tests/fail/07-define-invalid-identifier/: expected.stdout  main.h
generate-tests/fail/08-define-too-short/: expected.stdout  main.h
generate-tests/fail/09-define-non-capital/: expected.stdout  main.h
generate-tests/fail/10-define-not-starting-e/: expected.stdout  main.h
generate-tests/fail/11-define-zero-errno/: expected.stdout  main.h
generate-tests/fail/12-define-neg-errno/: expected.stdout  main.h
generate-tests/fail/13-define-existing-not-found/: expected.stdout  main.h
generate-tests/fail/14-define-invalid-errno-code/: expected.stdout  main.h
generate-tests/fail/15-define-duplicate/: expected.stdout  main.h
generate-tests/fail/16-define-no-comments/: expected.stdout  main.h
generate-tests/fail/17-define-too-many-comments/: expected.stdout  main.h
generate-tests/fail/18-unexpected-else/: expected.stdout  main.h
generate-tests/fail/19-unexpected-else-2/: expected.stdout  main.h
generate-tests/fail/20-ifdef-not-closed/: expected.stdout
generate-tests/fail/21-undef-undefined/: expected.stdout  main.h
generate-tests/ok/00-backslash-newline/: expected.stdout  main.h
generate-tests/ok/01-line-comment/: expected.stdout  main.h
generate-tests/ok/02-rel-include/: expected.stdout
generate-tests/ok/03-block-comments/: expected.stdout  main.h
generate-tests/ok/04-ifdef/: expected.stdout  main.h
generate-tests/ok/05-define-alias/: expected.stdout  main.h
generate-tests/ok/06-define-undef/: expected.stdout  main.h
generate-tests/ok/07-define-same-num-no-comment/: expected.stdout  main.h
