[package]
name = "errno-codes-tool"
description = "errno codes with messages from various OSes and architectures"
version = "0.1.0"
authors = ["Ivan Mironov <mironov.ivan@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["errno"]
categories = []
publish = true
repository = "https://github.com/im-0/errno-codes"
autobins = false

[badges]
travis-ci = { repository = "im-0/errno-codes", branch = "b0.1.0" }

[[bin]]
name = "errno-codes"
path = "src/main.rs"

[dependencies]
errno-codes = { version = "0.1", path = "../errno-codes", default_features = false }
